Estrutura html do site finalizada

--- a/servicos.html
+++ b/servicos.html
@@ -33,27 +33,49 @@
     </div>
     <div class="linha">
         <section>
-            <div class="coluna col3 sidebar">
-                <h3>clientes satisfeitos</h3>
-                <ul class="sem-marcador sem-padding">
-                    <li><a href="">Nome da empresa 1</a></li>
-                    <li><a href="">Nome da empresa 2</a></li>
-                    <li><a href="">Nome da empresa 3</a></li>
-                    <li><a href="">Nome da empresa 4</a></li>
-                    <li><a href="">Nome da empresa 5</a></li>
-                    <li><a href="">Nome da empresa 6</a></li>
-                    <li><a href="">Nome da empresa 7</a></li>
+            <div class="coluna col4 sidebar">
+                <h3>O que eu faço</h3>
+                <img src="img/ideia.jpg" alt="" />
+                <ul>
+                    <li>Identidade visual</li>
+                    <li>Layout para sites</li>
+                    <li>Sites corporativos</li>
+                    <li>Lojas virtuais</li>
+                    <li>Email marketing</li>
+                    <li>Marketing de conteúdo</li>
+                    <li>Consultoria estratégica</li>
                 </ul>
                 <a href="clientes.html" class="botao">Ver todos &raquo;</a>
             </div>
-            <div class="coluna col9">
-                <h2>Último trabalho: <em>Empresa ABC</em></h2>
-                <img src="img\thumb-grande.jpg" alt="" />
+            <div class="coluna col8">
+                <h2>Identidade visual</h2>
                 <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
                     nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
-                    nisi sed ipsum cursus aliquam faucibus nec justo. Praesent euismod, leo eu laoreet sodales, elit
-                    orci dapibus ipsum, lobortis blandit elit.</p>
-                <a href="clientes.html" class="botao">Ver outros trabalhos &raquo;</a>
+                    nisi sed ipsum cursus aliquam faucibus.
+                <h2>Layout para sites</h2>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.
+                <h2>Sites corporativos</h2>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.
+                <h2>Lojas virtuais</h2>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.
+                <h2>Email marketing</h2>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.
+                <h2>Marketing de conteúdo</h2>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.
+                <h2>Consultoria estratégica</h2>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.
             </div>
         </section>
     </div>
@@ -61,7 +83,7 @@
         <div class="linha">
             <div class="coluna col7">
                 <section>
-                    <h2>Como um site pode ajudar a sua empresa</h2>
+                    <h2>Como conquistar clientes na era digital</h2>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
                         nisi sed ipsum cursus aliquam faucibus nec justo.</p>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
