--- a/clientes.html
+++ b/clientes.html
@@ -33,27 +33,54 @@
     </div>
     <div class="linha">
         <section>
-            <div class="coluna col3 sidebar">
-                <h3>clientes satisfeitos</h3>
-                <ul class="sem-marcador sem-padding">
-                    <li><a href="">Nome da empresa 1</a></li>
-                    <li><a href="">Nome da empresa 2</a></li>
-                    <li><a href="">Nome da empresa 3</a></li>
-                    <li><a href="">Nome da empresa 4</a></li>
-                    <li><a href="">Nome da empresa 5</a></li>
-                    <li><a href="">Nome da empresa 6</a></li>
-                    <li><a href="">Nome da empresa 7</a></li>
-                </ul>
-                <a href="clientes.html" class="botao">Ver todos &raquo;</a>
+            <h2>Veja quem já contratou meus serviços</h2>
+            <div class="coluna col6">
+                <h4>Nome da empresa 1</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
             </div>
-            <div class="coluna col9">
-                <h2>Último trabalho: <em>Empresa ABC</em></h2>
-                <img src="img\thumb-grande.jpg" alt="" />
-                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
-                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
-                    nisi sed ipsum cursus aliquam faucibus nec justo. Praesent euismod, leo eu laoreet sodales, elit
-                    orci dapibus ipsum, lobortis blandit elit.</p>
-                <a href="clientes.html" class="botao">Ver outros trabalhos &raquo;</a>
+            <div class="coluna col6">
+                <h4>Nome da empresa 2</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
+            </div>
+            <div class="coluna col4">
+                <h4>Nome da empresa 3</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
+            </div>
+            <div class="coluna col4">
+                <h4>Nome da empresa 4</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
+            </div>
+            <div class="coluna col4">
+                <h4>Nome da empresa 5</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
+            </div>
+            <div class="coluna col4">
+                <h4>Nome da empresa 6</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
+            </div>
+            <div class="coluna col4">
+                <h4>Nome da empresa 7</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
+            </div>
+            <div class="coluna col4">
+                <h4>Nome da empresa 8</h4>
+                <img src="img/thumb-grande.jpg" alt=""/>
+                <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                    libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus.</p>
             </div>
         </section>
     </div>
@@ -61,13 +88,14 @@
         <div class="linha">
             <div class="coluna col7">
                 <section>
-                    <h2>Como um site pode ajudar a sua empresa</h2>
+                    <h2>Opinião de quem contratou</h2>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
                         nisi sed ipsum cursus aliquam faucibus nec justo.</p>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
                         nisi sed ipsum cursus aliquam faucibus nec justo.</p>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
                         nisi sed ipsum cursus aliquam faucibus nec justo.</p>
+                        <p><em>Fulano de tal - Empresa ABC</em></p>
                 </section>
             </div>
             <div class="coluna col5">
