--- a/contato.html
+++ b/contato.html
@@ -33,27 +33,35 @@
     </div>
     <div class="linha">
         <section>
-            <div class="coluna col3 sidebar">
-                <h3>clientes satisfeitos</h3>
-                <ul class="sem-marcador sem-padding">
-                    <li><a href="">Nome da empresa 1</a></li>
-                    <li><a href="">Nome da empresa 2</a></li>
-                    <li><a href="">Nome da empresa 3</a></li>
-                    <li><a href="">Nome da empresa 4</a></li>
-                    <li><a href="">Nome da empresa 5</a></li>
-                    <li><a href="">Nome da empresa 6</a></li>
-                    <li><a href="">Nome da empresa 7</a></li>
+            <div class="coluna col5 sidebar">
+                <h3>Localização</h3>
+                <img src="img/mapa.jpg" alt="" />
+                <ul class="sem-padding sem-marcador">
+                    <li>Rua Paula Vieres, 305</li>
+                    <li>Rio Longo</li>
+                    <li>Rio de Janeiro</li>
+                </ul>
+                <h3>Contato direto</h3>
+                <ul class="sem-padding sem-marcador">
+                    <li><strong>Fone:</strong> (21)xxxxx-xxxx</li>
+                    <li><strong>Email:</strong> email@gmail.com</li>
+                    <li><strong>Skype</strong> DanielSkype</li>
                 </ul>
                 <a href="clientes.html" class="botao">Ver todos &raquo;</a>
             </div>
-            <div class="coluna col9">
-                <h2>Último trabalho: <em>Empresa ABC</em></h2>
-                <img src="img\thumb-grande.jpg" alt="" />
-                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
-                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
-                    nisi sed ipsum cursus aliquam faucibus nec justo. Praesent euismod, leo eu laoreet sodales, elit
-                    orci dapibus ipsum, lobortis blandit elit.</p>
-                <a href="clientes.html" class="botao">Ver outros trabalhos &raquo;</a>
+            <div class="coluna col7">
+                <h2>Envie uma mensagem</h2>
+                <form action="">
+                    <label for="nome">Seu nome</label>
+                    <input type="text" name="nome" id="nome">
+                    <label for="email">Seu email</label>
+                    <input type="text" name="email" id="email">
+                    <label for="assunto">Assunto</label>
+                    <input type="text" name="assunto" id="assunto">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea name="mensagem" id="mensagem"></textarea>
+                    <input type="submit" class="botao" name="enviar" value="Enviar mensagem">
+                </form>
             </div>
         </section>
     </div>
@@ -61,11 +69,13 @@
         <div class="linha">
             <div class="coluna col7">
                 <section>
-                    <h2>Como um site pode ajudar a sua empresa</h2>
+                    <h2>Método alternativo de contato</h2>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
                         nisi sed ipsum cursus aliquam faucibus nec justo.</p>
-                    <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
-                        nisi sed ipsum cursus aliquam faucibus nec justo.</p>
+                    <ol>
+                        <li>Sinal de fumaça</li>
+                        <li>Mensagem em uma garrafa</li>
+                    </ol>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
                         nisi sed ipsum cursus aliquam faucibus nec justo.</p>
                 </section>
