--- a/sobre.html
+++ b/sobre.html
@@ -33,27 +33,37 @@
     </div>
     <div class="linha">
         <section>
-            <div class="coluna col3 sidebar">
-                <h3>clientes satisfeitos</h3>
-                <ul class="sem-marcador sem-padding">
-                    <li><a href="">Nome da empresa 1</a></li>
-                    <li><a href="">Nome da empresa 2</a></li>
-                    <li><a href="">Nome da empresa 3</a></li>
-                    <li><a href="">Nome da empresa 4</a></li>
-                    <li><a href="">Nome da empresa 5</a></li>
-                    <li><a href="">Nome da empresa 6</a></li>
-                    <li><a href="">Nome da empresa 7</a></li>
-                </ul>
-                <a href="clientes.html" class="botao">Ver todos &raquo;</a>
-            </div>
-            <div class="coluna col9">
-                <h2>Último trabalho: <em>Empresa ABC</em></h2>
-                <img src="img\thumb-grande.jpg" alt="" />
+            <div class="coluna col8">
+                <h2>Sobre mim</h2>
                 <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
                     nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
-                    nisi sed ipsum cursus aliquam faucibus nec justo. Praesent euismod, leo eu laoreet sodales, elit
-                    orci dapibus ipsum, lobortis blandit elit.</p>
-                <a href="clientes.html" class="botao">Ver outros trabalhos &raquo;</a>
+                    nisi sed ipsum cursus aliquam faucibus.</p>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.</p>
+                <h2>Por que trabalho com web</h2>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.</p>
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus.</p>
+
+            </div>
+            <div class="coluna col4 sidebar">
+                <h3>Formação profissional</h3>
+                <img src="img/formatura.jpg" alt="" />
+                <ul>
+                    <li>Graduado em análise e desenvolvimento de sistemas pela UniCarioca</li>
+                    <li>Especialização em Banco de dados</li>
+                </ul>
+                <h3>Áreas de conhecimento</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>javaScript</li>
+                    <li>Oracle DataBase</li>
+                </ul>
             </div>
         </section>
     </div>
@@ -61,7 +71,9 @@
         <div class="linha">
             <div class="coluna col7">
                 <section>
-                    <h2>Como um site pode ajudar a sua empresa</h2>
+                    <h2>Curiosidades</h2>
+                    <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                        nisi sed ipsum cursus aliquam faucibus nec justo.</p>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
                         nisi sed ipsum cursus aliquam faucibus nec justo.</p>
                     <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
