--- a/index.html
+++ b/index.html
@@ -1,14 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/estilo.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet"
+        type='text/css'>
     <title>DCamara - Desenvolvedor web</title>
 </head>
+
 <body>
-  
-    
+    <div class="header">
+        <div class="linha">
+            <header>
+                <div class="coluna col4">
+                    <h1 class="logo">DCamara</h1>
+                </div>
+                <div class="coluna col8">
+                    <nav>
+                        <ul class="menu inline sem-marcador">
+                            <li><a href="index.html">home</a></li>
+                            <li><a href="clientes.html">clientes</a></li>
+                            <li><a href="servicos.html">serviços</a></li>
+                            <li><a href="sobre.html">sobre</a></li>
+                            <li><a href="contato.html">contato</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+        </div>
+    </div>
+    <div class="linha">
+        <section>
+            <div class="coluna col3 sidebar">
+                <h3>clientes satisfeitos</h3>
+                <ul class="sem-marcador sem-padding">
+                    <li><a href="">Nome da empresa 1</a></li>
+                    <li><a href="">Nome da empresa 2</a></li>
+                    <li><a href="">Nome da empresa 3</a></li>
+                    <li><a href="">Nome da empresa 4</a></li>
+                    <li><a href="">Nome da empresa 5</a></li>
+                    <li><a href="">Nome da empresa 6</a></li>
+                    <li><a href="">Nome da empresa 7</a></li>
+                </ul>
+                <a href="clientes.html" class="botao">Ver todos &raquo;</a>
+            </div>
+            <div class="coluna col9">
+                <h2>Último trabalho: <em>Empresa ABC</em></h2>
+                <img src="img\thumb-grande.jpg" alt="" />
+                <p>Aenean vitae ligula urna. Fusce dignissim quam nisl, nec sodales nunc tempus id. Quisque fringilla
+                    nibh a porttitor commodo. Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                    nisi sed ipsum cursus aliquam faucibus nec justo. Praesent euismod, leo eu laoreet sodales, elit
+                    orci dapibus ipsum, lobortis blandit elit.</p>
+                <a href="clientes.html" class="botao">Ver outros trabalhos &raquo;</a>
+            </div>
+        </section>
+    </div>
+    <div class="conteudo-extra">
+        <div class="linha">
+            <div class="coluna col7">
+                <section>
+                    <h2>Como um site pode ajudar a sua empresa</h2>
+                    <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                        nisi sed ipsum cursus aliquam faucibus nec justo.</p>
+                    <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                        nisi sed ipsum cursus aliquam faucibus nec justo.</p>
+                    <p>Pellentesque sodales imperdiet risus, eget fermentum diam dapibus a. Ut id
+                        nisi sed ipsum cursus aliquam faucibus nec justo.</p>
+                </section>
+            </div>
+            <div class="coluna col5">
+                <h3>Últimas notícias</h3>
+                <ul class="sem-marcador sem-padding noticias">
+                    <li>
+                        <img src="/img/thumb-pequena.jpg" alt="" />
+                        <h4>Título da notícia publicada no blog</h4>
+                        <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                            libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus. <a
+                                href="">Leia mais &raquo;</a>
+                        <p>
+                    </li>
+                    <li>
+                        <img src="/img/thumb-pequena.jpg" alt="" />
+                        <h4>Título da notícia publicada no blog</h4>
+                        <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                            libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus. <a
+                                href="">Leia mais &raquo;</a>
+                        <p>
+                    </li>
+                    <li>
+                        <img src="/img/thumb-pequena.jpg" alt="" />
+                        <h4>Título da notícia publicada no blog</h4>
+                        <p>Vestibulum sit amet blandit libero. Cras blandit pretium molestie. Pellentesque in magna eu
+                            libero ultrices pharetra a nec sapien. Proin venenatis est accumsan nisl luctus. <a
+                                href="">Leia mais &raquo;</a>
+                        <p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
