--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
                 </ul>
                 <a href="clientes.html" class="botao">Ver todos &raquo;</a>
             </div>
-            <div class="coluna col7">
+            <div class="coluna col7 contato">
                 <h2>Envie uma mensagem</h2>
                 <form action="">
                     <label for="nome">Seu nome</label>
